# zerobridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
config/: config.toml.example
go-server/: auth.go  go.mod  go.sum  main.go  middleware.go  proxy.go  push.go  store.go  unlock.go
go-server/static/: index.html  manifest.json  sw.js
mac-agent/: com.zerobridge.zb-agent.plist  mac_agent.py  zb-agent.swift
pi-agent/: Cargo.toml
pi-agent/src/: config.rs  crypto.rs  daemon.rs  ipc.rs  main.rs  screen.rs
pi-agent/src/bridge/: mac_bridge.rs  mod.rs  serial_queue.rs  ssh_pool.rs  ws_pool.rs
pi-agent/src/hid/: keyboard.rs  keycodes.rs  media.rs  mod.rs  mouse.rs
pi-agent/src/serial/: protocol.rs  transport.rs
scripts/: activate.sh  build.sh  deploy.sh  gen-certs.sh  install.sh  latency-diag.sh  multi-hid-setup.sh  setup-gadget.sh  setup-mac.sh  stress-test-pi.sh  test-hid-live.sh  test-mac-agent.sh  zb-agent-ctl.sh  zb-ctl.sh
src/: main.rs  screen.rs
src/hid/: keyboard.rs  media.rs  mod.rs
src/serial/: protocol.rs  transport.rs
systemd/: go-server.service  mac-hid-setup.service  multi-hid-setup.service  pi-agent.service
