[package]
name = "pi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"
toml = "0.8"
dirs = "5"
