[package]
name = "pi-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
russh = "0.44"
russh-keys = "0.44"
async-trait = "0.1"
toml = "0.8"
dirs = "5"
tokio-tungstenite = "0.24"
futures-util = "0.3"
p256 = { version = "0.13", features = ["ecdh"] }
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
